--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -23,7 +23,7 @@ t<!DOCTYPE html>
           {% csrf_token %}
           <label for="city">Город</label>
           {{ form.name }}
-          <input type="submit" name="send" value="Узнать" class="mt-2 btn btn-danger">
+          <input type="submit" name="send" value="Search" class="mt-2 btn btn-danger">
         </form>
       </div>
       <div class="col-4 offset-1">
