--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -11,7 +11,7 @@ t<!DOCTYPE html>
   <div class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <ul class="nav nav-pills">
         <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Информация</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Information</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Документация</a></li>
       </ul>
   </div>
