--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -1,4 +1,4 @@
-t<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
@@ -27,7 +27,7 @@ t<!DOCTYPE html>
         </form>
       </div>
       <div class="col-4 offset-1">
-        <h1>Информация</h1>
+        <h1>Info</h1>
 
 
         {% for info in all_info %}
