--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -34,7 +34,7 @@
         <div class="alert alert-info">
           <div class="row">
             <div class="col-9">
-              <b>Город:</b> {{ info.city }}<br>
+	      <b>City:</b> {{ info.city }}<br>
               <b>Температура:</b> {{ info.temp }}<sup>o</sup><br>
             </div>
             <div class="col-2 offset-1">
